# xr_toolz

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/instructions/: docs-examples.instructions.md
.github/workflows/: typecheck.yml
api/core/: index.html
api/metrics/: index.html
api/reference/: index.html
api/validation/: index.html
contributing/: index.html
design/: index.html
design/api/: index.html
design/architecture/: index.html
design/boundaries/: index.html
design/decisions/: index.html
design/examples/: index.html
design/ob-1.1-xrpatcher-integration/: index.html
design/ob-1.2-cf-standard-name-rename/: index.html
design/ob-1.3-regions-and-subset/: index.html
design/ob-1.4-class4-profile-validation/: index.html
design/ocean-data-challenges-survey/: index.html
design/oceanbench-survey/: index.html
design/odc-1.1-fir-filters/: index.html
design/odc-1.2-grid-to-points/: index.html
design/odc-1.3-segmented-psd/: index.html
design/odc-1.4-binned-stats-regions/: index.html
design/odc-1.5-regime-bars-rotary/: index.html
design/odc-2.1-rmse-and-psd-spacetime/: index.html
design/odc-2.2-laplacian-gap-fill/: index.html
design/odc-2.3-facet-panel/: index.html
design/odc-3.1-spectral-flux-and-scales/: index.html
design/odc-3.3-lagrangian-reconciliation/: index.html
docs/: index.md
scripts/: _aemet_common.py  _cds_insitu_common.py  aemet_daily.py  aemet_monthly.py  aemet_resume.sh  aemet_smoke.py  cds_insitu_land_full.py  cds_insitu_land_smoke.py  cds_insitu_marine_full.py  cds_insitu_marine_smoke.py
search/: search_index.json
tests/: test_core.py  test_encoder_imports.py  test_foundations_bundle.py  test_geo.py  test_geo_along_track.py  test_geo_extended.py  test_geo_operators.py  test_geo_regions.py  test_geo_wavelet.py  test_inference_imports.py  test_inference_jax.py  test_inference_modelop.py  test_inference_sklearn.py  test_interpolate_conservative_coarsen.py  test_interpolate_coord_remap.py  test_interpolate_downscale.py  test_interpolate_gap_fill.py  test_interpolate_imports.py  test_interpolate_knn.py  test_interpolate_mask_ops.py  test_interpolate_operators.py  test_interpolate_refine_2d.py  test_interpolate_smooth.py  test_kde_to_grid.py  test_kinematics_imports.py  test_metrics_composite.py  test_metrics_frequency_band.py  test_metrics_imports.py  test_metrics_odc14.py  test_metrics_pixel_semantics.py  test_metrics_segmented_psd.py  test_metrics_v1_scales.py  test_metrics_v2_data_representation.py  test_metrics_v4_process.py  test_metrics_wavelet.py  test_ocn.py  test_pipeline_helpers.py  test_signature_summary.py  test_sklearn_wrap.py  test_tier_contract.py  (+3 more)
(+300 files in other folders)
