[project]
name = "xr_toolz"
version = "0.0.0"
description = "Composable operator library for geoprocessing Earth System Data Cubes."
authors = [
    {name="J. Emmanuel Johnson", email="jemanjohnson34@gmail.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["xarray", "earth-science", "geoprocessing", "climate", "oceanography"]
requires-python = ">=3.12"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "xarray>=2024.2",
    "pandas>=2.1",
    "rioxarray>=0.15",
    "pyproj>=3.6",
    "regionmask>=0.12",
    "xrft>=1.0",
    "xskillscore>=0.0.26",
]

[project.urls]
Repository = "https://github.com/jejjohnson/xr_toolz"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.5.1",
]
lint = [
    "ruff>=0.15.10",
]
typecheck = [
    "ty>=0.0.30",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-jupyter>=0.26.2",
    "jupytext>=1.19.1",
    "ipykernel>=7.2.0",
    # matplotlib + watermark used by the example notebooks during local
    # re-execution. The guarded watermark cell in each notebook no-ops
    # if the package is missing, but installing it here lets the version
    # readout actually print under `nbconvert --execute`.
    "matplotlib>=3.8",
    "watermark>=2.4",
    # pygments 2.20.0 dropped the None -> '' coercion for HtmlFormatter(filename=...),
    # but pymdownx.highlight 10.21.x still passes the untitled-code-block title
    # through as None. Pin until a fixed pymdown-extensions release ships (#38).
    "pygments>=2.19,<2.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xr_toolz"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E402", "E721", "E731", "E741"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/xr_toolz --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["src/xr_toolz"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
